--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,6 @@ layout: default
 
 <body>
 	<header>
-		<div style="width:900px;margin: 0 auto;">
 			<div class="row">
 				<div class="col" style="font-size:35px;text-align: right;">
 					<a href="/">Waiting15</a>
@@ -14,14 +13,11 @@ layout: default
 					<a href="/contact">contact</a>
 				</div>
 			</div>
-		</div>
 	</header>
 	<main>
 		<div class = "post-wrapper">
 			{{ content }}
 		</div>
 	</main>
-	<footer>
-
-	</footer>
+	<footer>© 2023 Waiting15. All rights reserved. </footer>
 </body>
