--- a/_includes/style.css
+++ b/_includes/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-	background-color: #f5f5f5;
+	background-color: #f4f4f4;
 	color: black;
 }
 a{
@@ -21,12 +21,13 @@ p{
 }
 
 .post-wrapper{
-	width: 900px;
+	max-width: 900px;
 	margin: 0 auto;
 	padding: 80px 60px;
 	background: #fff;
 	color: black;
 	font-size: 18px;
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 .post-wrapper h2 {
 	font-size: 23px;
@@ -52,4 +53,14 @@ p{
 }
 ul.none-liststyle{
 	list-style: none;
+}
+
+footer {
+	margin-top: 20px;
+	text-align: center;
+}
+
+header {
+	max-width: 900px;
+	margin: 0 auto;
 }
